--- a/src/main/resources/templates/article/edit.html
+++ b/src/main/resources/templates/article/edit.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div th:replace="fragment/navbar"></div>
   <div id="articleId" th:attr="articleId=${articleId}" class="d-none"></div>
-  <div class="row" style="margin-top:150px;" id="app">
+  <div class="row" style="margin-top:150px;" id="app" v-cloak>
     <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
         <a class="navbar-brand" href="#">主题-文章-文章详情-编辑模式</a>
