--- a/src/main/resources/templates/card/edit.html
+++ b/src/main/resources/templates/card/edit.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" style="margin-top:150px;" id="app">
+  <div class="row" style="margin-top:150px;" id="app" v-cloak>
     <div class="col-md-12 offset-md-0 border rounded">
 
       <nav class="navbar navbar-light border-bottom">
