--- a/src/main/resources/templates/subject/list.html
+++ b/src/main/resources/templates/subject/list.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" id="app" style="margin-top:150px;">
+  <div class="row" id="app" v-cloak style="margin-top:150px;">
     <div class="col-md-6 offset-md-3 border rounded">
       <nav class="navbar navbar-light">
         <botton class="navbar-brand">主题列表</botton>
