--- a/src/main/resources/templates/user/psdreset.html
+++ b/src/main/resources/templates/user/psdreset.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" style="margin-top:150px;" id="app">
+  <div class="row" style="margin-top:150px;" id="app" v-cloak>
     <div class="col-md-6 offset-md-3 border rounded">
       <h5 style="padding:20px;" class="border-bottom">重置密码</h5>
       <form style="padding:20px;">
