--- a/src/main/resources/templates/nav/read.html
+++ b/src/main/resources/templates/nav/read.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" style="margin-top:150px;" id="app">
+  <div class="row" style="margin-top:150px;" id="app" v-cloak>
     <div class="col-md-6 offset-md-3 border rounded">
       <nav class="navbar navbar-light">
         <a class="navbar-brand" th:text="'主题导航（' + ${subject.name} + '）'" th:attr="subjectId=${subject.id}" id="subjectId">主题导航</a>
