--- a/src/main/resources/templates/subject/add.html
+++ b/src/main/resources/templates/subject/add.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" style="margin-top:50px;" id="app">
+  <div class="row" style="margin-top:50px;" id="app" v-cloak>
     <div class="col-md-6 offset-md-3 border rounded">
       <nav class="navbar navbar-light border-bottom">
         <a class="navbar-brand" href="#">新建主题</a>
