cheatsheet flex layout fixed

--- a/src/main/resources/templates/cheat/edit.html
+++ b/src/main/resources/templates/cheat/edit.html
@@ -12,8 +12,8 @@
         <a href="#" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#newModal">添加sheet</a>
       </nav>
 
-      <div style="padding-bottom:15px;padding-top:15px;" class="d-flex justify-content-between align-items-top">
-        <div v-for="cheat in cheats" class="card" style="width:360px;">
+      <div style="padding-bottom:15px;padding-top:15px;" class="d-flex flex-wrap">
+        <div v-for="cheat in cheats" class="card" style="width:363px;">
           <div class="card-header border-bottom-0">
             {{cheat.title}}
             <div class="btn-group float-right">
